PN-3112 risolti code smells